--- a/dx12/dx12.vcxproj
+++ b/dx12/dx12.vcxproj
@@ -100,7 +100,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib;d3dcompiler.lib</AdditionalDependencies>
+      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib;d3dcompiler.lib;windowscodecs.lib;ole32.lib</AdditionalDependencies>
     </Link>
     <FxCompile>
       <ShaderModel>5.1</ShaderModel>
@@ -121,7 +121,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib;d3dcompiler.lib</AdditionalDependencies>
+      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib;d3dcompiler.lib;windowscodecs.lib;ole32.lib</AdditionalDependencies>
     </Link>
     <FxCompile>
       <ShaderModel>5.1</ShaderModel>
@@ -139,7 +139,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib;d3dcompiler.lib</AdditionalDependencies>
+      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib;d3dcompiler.lib;windowscodecs.lib;ole32.lib</AdditionalDependencies>
     </Link>
     <FxCompile>
       <ShaderModel>5.1</ShaderModel>
@@ -160,7 +160,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib;d3dcompiler.lib</AdditionalDependencies>
+      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib;d3dcompiler.lib;windowscodecs.lib;ole32.lib</AdditionalDependencies>
     </Link>
     <FxCompile>
       <ShaderModel>5.1</ShaderModel>
