--- a/dx12/dx12.vcxproj.filters
+++ b/dx12/dx12.vcxproj.filters
@@ -119,6 +119,15 @@
     <FxCompile Include="dx12_vs_water.hlsl">
       <Filter>shader</Filter>
     </FxCompile>
+    <FxCompile Include="dx12_gs_billboard.hlsl">
+      <Filter>shader</Filter>
+    </FxCompile>
+    <FxCompile Include="dx12_vs_billboard.hlsl">
+      <Filter>shader</Filter>
+    </FxCompile>
+    <FxCompile Include="dx12_ps_light_tex.hlsl">
+      <Filter>shader</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="blinn_phong.hlsli">
